# Obsidian-Vault

./: .gitignore  .gitmodules  AI for Everyone.md  AQA Paper 1 - June 2020.md  Adding Self Parameter to Class Methods.md  Alphabet to Vowels.md  Annotations in Python.md  Arrays.md  Boolean Operations.md  Booleans and Boolean Evaluation.md  Building a Blackjack Card Game (Part 1).md  Built-In Functions for Numbers.md  Built-In and User-Defined Data Types.md  Calculating the Value of a Hand.md  Calculator.md  Card Class Refactoring and Initialization.md  Checking for Winners.md  Class Diagram Example.md  Class Diagrams for Inheritance.md  Conditional Statements with If.md  Constants and Variables.md  Creating Variables and Functions.md  Creating a Card Class and Initializing Card Attributes.md  Creating a Deck Class and Initializing Instances.md  Creating a Dictionary for Card Rank and Value.md  Creating a Python game using functions and conditionals.md  Creating a Shuffle Function in the Deck Class.md  Creating an "if" statement within a function.md  Creating and Shuffling Multiple Decks.md  Data Storage with Dictionaries.md  Data Structure and Abstract Data Type.md  Data Structures and Abstract Data Types.md  Data Structures and Algorithms.md  Dealer's Turn and Final Results.md  Decorators.md  Difference Between OR and XOR.md  Docstrings and Documentation.md  Encapsulation.md  Enumerations (Enums) in Python.md  Examples of Arithmetic Operators.md  (+77 more)
15-Hang-Man/: CMakeLists.txt
15-Hang-Man/src/: HangmanEngine.cpp  HangmanEngine.hpp  JSONParser.cpp  JSONParser.hpp  main.cpp  (+1 more)
(+177 files in other folders)
